--- a/TrainFasterRCNN.ipynb
+++ b/TrainFasterRCNN.ipynb
@@ -1,30 +1,26 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": 3
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "orig_nbformat": 2,
+    "colab": {
+      "name": "TrainFasterRCNN.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
   },
-  "orig_nbformat": 2
- },
- "nbformat": 4,
- "nbformat_minor": 2,
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)"
-   ]
-  }
- ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nV3c-5deYopE"
+      },
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)"
+      ]
+    }
+  ]
 }
