--- a/TrainFasterRCNN.ipynb
+++ b/TrainFasterRCNN.ipynb
@@ -19,7 +19,7 @@
         "id": "nV3c-5deYopE"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/YoavKurtz/ObjDetectChallenge/blob/main/TrainFasterRCNN.ipynb)"
       ]
     }
   ]
